--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="download">
                 <h2 align="center">Download</h2>
                 
-                <p align="center"><a href="download/planet.exe" download>Planet</a></p>
+                <p align="center"><a href="https://github.com/artyom7774/Planet/releases/tag/Planet" download>Planet</a></p>
             </div>
 
             <div class="links">
