--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         
         <footer>
             <form>
-                <div class="settings-language">
-                    <div class="settings-language-element">
-                        <input type="radio" id="ru" name="choose" class="settings-language-element-button" onclick="languageChooseRussian()">
-                        <label for="ru" class="settings-language-element-text">Русский</label>
+                <div class="radio-group">
+                    <div>
+                        <input type="radio" id="ru" name="choose" onclick="languageChooseRussian()">
+                        <label for="ru">Русский</label>
                     </div>
-                    <div class="settings-language-element">
-                        <input type="radio" id="en" name="choose" class="settings-language-element-button" onclick="languageChooseEnglish()">
-                        <label for="en" class="settings-language-element-text">English</label>
+                    <div>
+                        <input type="radio" id="en" name="choose" onclick="languageChooseEnglish()">
+                        <label for="en">English</label>
                     </div>
                 </div>
             </form>
