--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </content>
 
         <footer class="footer">
-
+            <p class="footer__text">Game Engine 3 ©2023-2025</p>
         </footer>
         <script src="script.js"></script>
     </body>
