--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header class="header">
             <p class="header__name">Game Engine 3</p>
-            <p class="header__discription">A shell for creating applications and games with a graphical editor in the Python 3 programming language.</p>
+            <p class="header__discription">...</p>
         </header>
 
         <content class="content">
@@ -25,7 +25,7 @@
                             <input type="radio" name="language" value="ru" onclick="setLanguage('ru')"> Русский
                         </label>
                         <label>
-                            <input type="radio" name="language" value="en" onclick="setLanguage('en')"> English
+                            <input type="radio" name="language" value="en" onclick="setLanguage('en')" checked> English
                         </label>
                     </form>
                 </div>
