--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
                         </label>
                     </form>
                 </div>
+                <div class="content__menu__separator">
+
+                </div>
+                <div class="content__menu__settings">
+                    <form class="header__theme__settings">
+                        <label>
+                            <input class="header__theme__setting__light", type="radio" name="theme" value="light" onclick="setTheme('light')" checked> Light
+                        </label>
+                        <label>
+                            <input class="header__theme__setting__dark", type="radio" name="theme" value="dark" onclick="setTheme('dark')"> Dark
+                        </label>
+                    </form>
+                </div>
             </div>
             <div class="content__main">
                 ...
